[package]
authors = ["Patrick Fernie <patrick.fernie@gmail.com>"]
edition = "2018"
name = "rdedup-prune"
version = "0.1.0"
[dependencies]
anyhow = "1.0.27"
chrono = "*"
rdedup-lib = "3.1.0"
rson_rs = "0.2.1"
serde = "1.0.105"
serde_derive = "1.0.105"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
structopt = "0.3.12"
url = "1.7.2"
