[package]
authors = ["Patrick Fernie <patrick.fernie@gmail.com>"]
edition = "2018"
name = "rdedup-prune"
version = "0.1.0"
license = "MPL-2.0"
description = "implementation of a `prune` command for `rdedup`, following the behavior of `attic`"
documentation = "https://docs.rs/rdedup-prune"
homepage = "https://github.com/pfernie/rdedup-prune"
repository = "https://github.com/pfernie/rdedup-prune"
readme = "README.md"

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.13"
rdedup-lib = "3.1.0"
rson_rs = "0.2.1"
serde = "1.0.114"
serde_derive = "1.0.114"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
structopt = "0.3.15"
url = "1.7.2"
